--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,3 +87,13 @@ body {
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
 }
+
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000; 
+  /* background-color: white;  */
+}
