--- a/src/components/EmblaCarousel/embla.css
+++ b/src/components/EmblaCarousel/embla.css
@@ -25,7 +25,7 @@
 }
 
 .embla__slide__img {
-  border-radius: 1.8rem;
+  /* border-radius: 1rem; */
   display: block;
   height: var(--slide-height);
   width: 100%;
@@ -33,12 +33,17 @@
 }
 
 .embla__controls {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  justify-content: space-between;
-  gap: 1.2rem;
-  /* margin-top: 1.8rem; */
+  display: flex;
+  flex-direction: column;
+  /* Makes items stack vertically */
+  justify-content: center;
+  /* Centers items vertically within the container */
+  align-items: center;
+  /* Centers items horizontally within the container */
+  gap: 0.6rem;
+  /* Adds space between items */
 }
+
 
 .embla__buttons {
   display: grid;
@@ -101,19 +106,19 @@
   border: 0;
   padding: 0;
   margin: 0;
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  border: 2px solid black;
+  border: 1px solid rgb(188, 181, 181);
 }
 
 .embla__dot:after {
   box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -123,14 +128,29 @@
 
 .embla__dot--selected:after {
   box-shadow: inset 0 0 0 0.2rem var(--text-body);
-  border: 2px solid black;
-  background-color: black;
+  /* border: 2px solid black; */
+  background-color: rgb(188, 181, 181);
 }
+
+.embla__slide__description {
+  position: absolute;
+  bottom: 50%;
+  left: 43%;
+  transform: translate(-40%, 50%);
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  padding: 0.8rem 1.2rem;
+  border-radius: 8px;
+  text-align: center;
+  width: 80%;
+  bottom: 50
+}
+
 
 
 @media (max-width: 768px) {
   .embla {
-    max-width: 80%;
+    max-width: 100%;
     --slide-height: 15rem;
     --slide-size: 80%;
   }
@@ -164,5 +184,19 @@
   .embla__dot:after {
     width: 13px;
     height: 13px;
+  }
+
+  .embla__slide__description {
+    position: absolute;
+    bottom: 50%;
+    left: 44.1%;
+    transform: translate(-40%, 50%);
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 0.8rem 1.2rem;
+    border-radius: 8px;
+    text-align: center;
+    width: 80%;
+    bottom: 35
   }
 }
